--- a/climatechangevisualization-master/package.json
+++ b/climatechangevisualization-master/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kayvanym.github.io/climatechangevisualization/",
+  "homepage": "https://wkristina.github.io/homework",
   "name": "datavisualization",
   "version": "0.1.0",
   "private": true,
@@ -33,5 +33,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.1.1"
   }
 }
